# 2024-RIFO_Gazebo

./: CMakeLists.txt  README.md  package.xml
arm_control/: CMakeLists.txt  package.xml
arm_control/src/: arm_command.cpp  func.cpp  main.cpp
config/: rrbot.rviz  rrbot_controllers.yaml
launch/: gazebo.launch  gazebo.launch.py  rrbot.launch.py  rrbot_control.launch  rrbot_rqt.launch  rrbot_rviz.launch
ros2_control_demo_bringup/: CMakeLists.txt  package.xml
ros2_control_demo_bringup/launch/: rrbot.launch.py
ros2_control_demo_description/rrbot_description/ros2_control/: rrbot.ros2_control.xacro
ros2_control_demo_description/rrbot_description/urdf/: rrbot_description.urdf.xacro
rrbot_control/: CMakeLists.txt  package.xml
rrbot_control/src/: func.cpp  joint_control.cpp
rrbot_description/urdf/: rrbot_6DoF.xacro
rrbot_gazebo/launch/: rrbot_world.launch
rrbot_ros2/: CMakeLists.txt  package.xml
rrbot_ros2/launch/: gazebo.launch.py
rrbot_ros2/src/: rrbot2_command.cpp  rrbot2_func.cpp  rrbot2_main.cpp  rrbot_ros2_plugin.cpp
rrbot_ros2/urdf/: rrbot_ros2.urdf
src/: arm_command.cpp  arm_main.cpp  arm_plugin.cpp  func.cpp  joint_control.cpp  main.cpp  rrbot2_func.cpp
urdf/: rrbot.gazebo  rrbot.urdf.xacro  rrbot.xacro  rrbot2.urdf
