<?xml version="1.0"?>
<package format="3">
  <name>rifo_gazebo2</name>
  <version>0.0.0</version>
  <description>2024 Robotics Innovatory Freshman Orientation package</description>
  <maintainer email="zcfilosvy522@gmail.com">Junha Song</maintainer>
  <license>BSD</license>

  <!-- Uncomment and update URLs if needed -->
  <!--
  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- <build_depend>rclcpp</build_depend>
  <build_depend<std_msgs</build_depend>
  <build_depend>message_generation</build_depend> -->

  <!-- <exec_depend>rclcpp</exec_depend>
  <exec_depend<std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> -->

  <!-- Add additional ROS 2 dependencies -->
  <!-- <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
